--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
   "scripts": {
     "dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@cloudflare/workers-types": "^4.20221111.1",
+    "@types/jest": "^29.2.5",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.8.0",
     "rimraf": "^3.0.2",
@@ -24,6 +32,7 @@
   "dependencies": {
     "@pothos/core": "^3.24.0",
     "@pothos/plugin-errors": "^3.9.0",
+    "@pothos/plugin-mocks": "^3.7.7",
     "@pothos/plugin-prisma": "^3.39.0",
     "@pothos/plugin-validation": "^3.8.7",
     "@pothos/plugin-with-input": "^3.9.7",
