--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "wrangler": "^2.6.2"
   },
   "dependencies": {
+    "@graphql-yoga/plugin-response-cache": "^1.3.0",
     "@pothos/core": "^3.24.0",
     "@pothos/plugin-errors": "^3.9.0",
     "@pothos/plugin-mocks": "^3.7.7",
