--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@pothos/plugin-validation": "^3.8.7",
     "@pothos/plugin-with-input": "^3.9.7",
     "@prisma/client": "^4.8.0",
+    "express": "^4.18.2",
     "graphql-scalars": "^1.20.1",
     "graphql-yoga": "^3.1.2",
     "mongodb": "^4.13.0",
