--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@cloudflare/workers-types": "^4.20221111.1",
     "@types/jest": "^29.2.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.11.18",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
@@ -38,7 +38,7 @@
     "@pothos/plugin-validation": "^3.8.7",
     "@pothos/plugin-with-input": "^3.9.7",
     "@prisma/client": "^4.8.0",
-    "express": "^4.18.2",
+    "fast-jwt": "^2.0.2",
     "graphql-scalars": "^1.20.1",
     "graphql-yoga": "^3.1.2",
     "mongodb": "^4.13.0",
