--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fast-jwt": "^2.0.2",
     "graphql-scalars": "^1.20.1",
     "graphql-yoga": "^3.1.2",
+    "ioredis": "^5.2.4",
     "mongodb": "^4.13.0",
     "zod": "^3.20.2"
   }
